fix alignment of profile buttons

--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -1,5 +1,21 @@
+@import "../../assets/sass/colors.scss";
+
+/* ===== ProfilePage CSS ===== */
+
 .profile-page-container {
   margin-left: auto;
   margin-right: auto;
   width: 90%;
+}
+
+.profile-page-container > .title-container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.profile-page-container > .title-container > button {
+  border: 2px solid $deep-yellow;
+  margin: 10px;
+  padding: 15px 20px;
+  border-radius: 5px;
 }
